# gateserver

./: .gitignore  Cargo.toml  LICENSES-THIRD-PARTY  README.md  build.rs  build_x86_64_linux.sh
src/: main.rs  utils.rs
src/commands/: config.rs  mod.rs  net.rs
src/config/: mod.rs  server.json  server_config.rs
src/services/: api.rs  default.rs  mod.rs  not_found.html  reverse_proxy.rs  tcp_proxy.rs  web.rs  websocket_proxy.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.vue  router.ts
web/src/views/: HanabiView.vue  HomeView.vue
