[package]
name = "gateserver"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rbase64 = "2.0"
lazy_static = "1.5"
byteorder = "1.5"
paste = "1.0"
chrono = "0.4"

env_logger = "0.11"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.2", features = ["std", "log-tracer"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "std",
    "tracing",
    "tracing-log",
] }
anyhow = "1.0"
ansi_term = "0.12"

tokio = { version = "1.39", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.23"
futures = "0.3"
futures-util = "0.3"

prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

axum = { version = "0.7", features = ["macros", "ws"] }
axum-server = "0.7"
hyper = { version = "1.4", features = [ "full" ] }
hyper-util = { version = "0.1", features = [ "full" ] }
http-body-util = "0.1"
mime_guess = "2.0"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
