[package]
name = "gateserver"
version = "0.1.0"
authors = ["GitHub@Akiko97 <mud.miscue_0l@icloud.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.5"

env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
ansi_term = "0.12"

tokio = { version = "1.39", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1.4", features = [ "full" ] }
hyper-util = { version = "0.1", features = [ "full" ] }
http-body-util = "0.1"
mime_guess = "2.0"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
